fixes and spacing

--- a/src/components/timeline-event/time-event.scss
+++ b/src/components/timeline-event/time-event.scss
@@ -22,6 +22,7 @@
 
   &-title {
     margin: 0.8rem;
+    font-size: 1.5rem;
     text-align: center;
   }
 
