--- a/src/layout/components/nav/nav.scss
+++ b/src/layout/components/nav/nav.scss
@@ -6,8 +6,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 1.4rem;
     padding: 1rem 0;
+
+    li {
+      margin: 0 0.8rem
+    }
   }
 
   &-link {
